# lab-06-multithreads

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
sources/: main.cpp
